--- a/.github/workflows/pythontest.yml
+++ b/.github/workflows/pythontest.yml
@@ -16,5 +16,8 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v4
 
+            - name: Install Pytest
+              run: pip install pytest
+
             - name: Run tests
               run: pytest -v
