--- a/.github/workflows/pythontest.yml
+++ b/.github/workflows/pythontest.yml
@@ -21,3 +21,6 @@ jobs:
 
             - name: Run tests
               run: pytest -v
+
+            - name: Install Flaks
+              run: pip install Flask pytest
